Navigation Gizmo Theme Not Updating to the Default Dark Preset #66453

Closed
opened 2019-07-05 00:19:34 +02:00 by CandleComet · 3 comments

System Information
Operating system: Linux-4.15.0-54-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits
Graphics card: Mesa DRI Intel(R) Haswell Mobile Intel Open Source Technology Center 4.5 (Core Profile) Mesa 18.2.8

Blender Version
Broken: version: 2.80 (sub 74), branch: master (modified), commit date: 2019-07-04 16:16, hash: 81b68f7279

Exact steps for others to reproduce the error
Startup default blender
Change the theme preset to Blender Light
Change it back to Blender Dark
The navigation gizmo buttons do not update. While everything else is correctly using the dark theme, they are stuck like this:
ThemeBug.png

This does not happen when swapping among other themes. It happens only when reverting the preset from any theme back to the default Dark Theme.

**System Information** Operating system: Linux-4.15.0-54-generic-x86_64-with-Ubuntu-18.04-bionic 64 Bits Graphics card: Mesa DRI Intel(R) Haswell Mobile Intel Open Source Technology Center 4.5 (Core Profile) Mesa 18.2.8 **Blender Version** Broken: version: 2.80 (sub 74), branch: master (modified), commit date: 2019-07-04 16:16, hash: `81b68f7279` **Exact steps for others to reproduce the error** Startup default blender Change the theme preset to Blender Light Change it back to Blender Dark The navigation gizmo buttons do not update. While everything else is correctly using the dark theme, they are stuck like this: ![ThemeBug.png](https://archive.blender.org/developer/F7567056/ThemeBug.png) This does not happen when swapping among other themes. It happens only when reverting the preset from any theme *back to* the default Dark Theme.
Author

Added subscriber: @CandleComet

Added subscriber: @CandleComet
Campbell Barton was assigned by Germano Cavalcante 2019-07-05 03:50:26 +02:00

This issue was referenced by 338cbe4ad6

This issue was referenced by 338cbe4ad68394b90381b4d9a69e880d66381312

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66453
No description provided.