Fix T66453: navigation gizmo doesn't refresh on theme change